# internal-beta

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/postgres/: init.sql
services/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/src/: App.tsx  index.css  main.tsx
services/frontend/src/api/: client.ts
services/frontend/src/components/: InfoTooltip.tsx
services/frontend/src/components/CandidateAnalysis/: CandidateAnalysis.tsx
services/frontend/src/components/ConcentrationChart/: ConcentrationChart.tsx
services/frontend/src/components/ConcentrationDelta/: ConcentrationDelta.tsx
services/frontend/src/components/CorrelationMatrix/: CorrelationMatrix.tsx
services/frontend/src/components/DrawdownChart/: DrawdownChart.tsx
services/frontend/src/components/EfficientFrontier/: EfficientFrontier.tsx
services/frontend/src/components/MCTRBar/: MCTRBar.tsx
services/frontend/src/components/PortfolioInput/: PortfolioInput.tsx
services/frontend/src/components/QualityDashboard/: QualityDashboard.tsx
services/frontend/src/components/Recommendations/: Recommendations.tsx
services/frontend/src/components/SectorImpact/: SectorImpact.tsx
services/frontend/src/contexts/: ScreenerContext.tsx
services/frontend/src/pages/: Analysis.tsx  Dashboard.tsx  Holdings.tsx  Screener.tsx
services/frontend/src/utils/: colors.ts  format.ts  labels.ts
services/market-data/: Dockerfile  pyproject.toml
services/market-data/src/: main.py  models.py
services/market-data/src/data/: emerging_markets.json  europe.json  israel.json  sp400.json  sp500_sp400.json  us_extra.json
services/market-data/src/domain/: market_data.py  quality.py  screener.py
services/market-data/src/infrastructure/: redis_cache.py  yfinance_adapter.py
services/market-data/src/routes/: screener.py  tickers.py
services/market-data/tests/: test_compute_returns.py  test_quality.py  test_redis_cache.py  test_screener.py  test_tickers_routes.py
services/portfolio/: Dockerfile  pyproject.toml
services/portfolio/src/: dependencies.py  main.py
services/portfolio/src/domain/: concentration.py  frontier.py  fundamentals.py  optimization.py  portfolio.py
services/portfolio/src/infrastructure/: market_data_client.py
services/portfolio/src/routes/: portfolio.py
services/portfolio/src/schemas/: portfolio_schemas.py
services/portfolio/tests/: test_concentration.py  test_fundamentals.py  test_market_data_client.py  test_portfolio_domain.py  test_portfolio_routes.py
services/portfolio/typings/pypfopt/: __init__.pyi  risk_models.pyi
services/risk/: Dockerfile  pyproject.toml
services/risk/src/: dependencies.py  main.py
services/risk/src/domain/: drawdown.py  hedging.py  internal_beta.py  mctr.py  momentum.py  optimal_allocation.py  portfolio_math.py  recommendations.py  sharpe.py  stress.py  var.py
services/risk/src/infrastructure/: market_data_client.py
services/risk/src/routes/: risk.py
services/risk/src/schemas/: risk_schemas.py
services/risk/tests/: test_risk_domain.py
