[project]
name = "market-data"
version = "0.1.0"
description = "Async market data fetching service — prices, returns, sector info"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=0.2.54",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "redis[asyncio]>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pyright>=1.1.408",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/routes/**" = ["B008"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
exclude = ["tests/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
